--- a/src/App.css
+++ b/src/App.css
@@ -142,10 +142,9 @@
 
 .app-content {
     flex: 1;
-    padding: 10px 30px 30px;
+    padding: 3% 10% 10%;
     overflow: auto;
 }
-
 
 .footer {
     padding: 12px 16px;
