--- a/src/components/css/SearchFilterPanel.css
+++ b/src/components/css/SearchFilterPanel.css
@@ -13,30 +13,20 @@
 .filter-wrapper {
     position: relative;
     display: inline-block;
-    width: 15%;
+    width: 9rem;
     height: 36px;
-}
-
-.filter-button {
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #e3e3e3;
-    color: black;
-    border: none;
-    border-radius: 12px;
 }
 
 .filter-widget {
     position: absolute;
     z-index: 9999;
-    right: 0;
+    left: -6rem;
     margin-top: 0.5rem;
     width: 15rem;
     height: auto;
     background: white;
     border-radius: 12px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
     padding: 0.5rem 0;
 }
 
